[package]
name = "tylift"
version = "0.3.2"
description = "Lift enum variants to the type-level."
license = "MIT"
repository = "https://github.com/fmease/tylift"
authors = ["León Orell Valerian Liehr <liehr.exchange@gmx.net>"]
readme = "README.md"
keywords = ["lift", "type", "kind", "enum", "macro"]
edition = "2018"

[features]
span_errors = []

[lib]
proc-macro = true

# [[test]]
# name = "tests"
# path = "src/tests.rs"

[dependencies]
proc-macro2 = "1.0.7"
syn = { version = "1.0.13", features = ["full"] }
quote = "1.0.2"

